--- a/project1/index.html
+++ b/project1/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>To-do list</title>
   <style>
-#app {
+#appcontainer {
   margin: auto;
   width: 33%;
   margin-top: 100px;
@@ -13,6 +13,11 @@
 -moz-box-shadow: 0px 0px 78px -6px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 78px -6px rgba(0,0,0,0.75);
 }
+    .finishedTask {
+        font-weight: bold;
+    }
+
+
     body {
         background:#F0F8FF;
     }
@@ -22,7 +27,10 @@ box-shadow: 0px 0px 78px -6px rgba(0,0,0,0.75);
   <script type="text/javascript" src="render.js"></script>
   </head>
   <body>
-    <div id="app" >
+    <div id="appcontainer">
+        <div id="notification"></div>
+        <div id="header"></div>
+        <div id="app" > </div>
     </div>
   </body>
   <script>
